--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MICROSOFT_APP_ID=f5c45411-326e-48ad-a7f2-88d079cdfc44
-MICROSFT_APP_PASSWORD=917742e3-948c-498a-9849-83e0af87dfff
+MICROSOFT_APP_ID=25d587bc-8451-475e-bd74-f5fd80c4866b
+MICROSFT_APP_PASSWORD=k56LZjP4t-Dfs4kwF4~NH6vsD_G2j0-fos
 SEARCH_APP_NAME=psearch
 SEARCH_API_KEY=F8E7F9E4E04B1A828A4F7F439E68BD8A
 LUIS_ENDPOINT=https://ps9loius.cognitiveservices.azure.com/
